--- a/src/app/cord/page.module.css
+++ b/src/app/cord/page.module.css
@@ -13,30 +13,44 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 100px;
-  margin-bottom: 20px;
   box-shadow: 0px 0px 28px -3px rgba(0, 0, 0, 0.1);
 }
 
-
 .main {
   width: 80%;
-  align-items: center;
+  height: 90vh;
   display: flex;
+  align-items: center;
   flex-direction: column;
+  justify-content: space-between;
+  padding-top: 50px;
 }
 
-.divCord{
+.form {
+  width: 65%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-items: center;
+  grid-gap: 10px;
+}
+
+.form :nth-child(3),
+.form :nth-child(4) {
+  grid-column: span 2;
+}
+
+.divInput {
   width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.divInput{
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+}
+
+.divInput input {
+  height: 30px;
+  width: 100%;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid gray;
+  margin-top: 2px;
+  padding-left: 10px;
 }
